[gd_scene load_steps=45 format=4 uid="uid://okeh157g3swl"]

[ext_resource type="Script" uid="uid://bl0o2w56k0rk5" path="res://scripts/Communs/piece.gd" id="1_6517k"]
[ext_resource type="Texture2D" uid="uid://bppd31wut5xla" path="res://assets/mur/Mur_Bleu.png" id="2_68ymg"]
[ext_resource type="Texture2D" uid="uid://do5mew8c5n6q" path="res://assets/mur/Mur_Rouge.png" id="3_2u0g6"]
[ext_resource type="Texture2D" uid="uid://cvgp3svwl2wo0" path="res://assets/mur/Mur_Vert.png" id="4_eoixc"]
[ext_resource type="Texture2D" uid="uid://l8snwins3xjd" path="res://assets/sol/parquet-brun-clair-fin-(milieu)-pixilart(1).png" id="5_lguqs"]
[ext_resource type="Texture2D" uid="uid://biihxfugstveu" path="res://assets/sol/parquet-brun-clair-fin-(milieu)-pixilart.png" id="6_68ymg"]
[ext_resource type="Texture2D" uid="uid://fm5bui5nacmc" path="res://assets/sol/parquet-brun-clair-pixilart(1).png" id="6_6517k"]
[ext_resource type="Texture2D" uid="uid://trxci3tyhtj6" path="res://assets/sol/parquet-brun-clair-pixilart(2).png" id="7_ijx10"]
[ext_resource type="Texture2D" uid="uid://bdkow7n0au8bv" path="res://assets/sol/parquet-brun-clair-pixilart.png" id="8_wdoph"]
[ext_resource type="Texture2D" uid="uid://e41tvwpti1lr" path="res://assets/sol/pixilart-drawing(2).png" id="9_fc6x3"]
[ext_resource type="PackedScene" uid="uid://bidemcih0p3dj" path="res://scenes/menu.tscn" id="10_svf3d"]
[ext_resource type="PackedScene" uid="uid://1slb4ng5gwih" path="res://scenes/Magasin.tscn" id="12_irfwe"]
[ext_resource type="AudioStream" uid="uid://db351d17gu0mw" path="res://musique/door_opening.ogg" id="14_6517k"]
[ext_resource type="AudioStream" uid="uid://johqbx3tpyhk" path="res://musique/magasin_background.mp3" id="15_ijx10"]
[ext_resource type="Script" uid="uid://ci6e1yq5r3qrp" path="res://scripts/liste_objets.gd" id="15_wdoph"]
[ext_resource type="AudioStream" uid="uid://2cgu5caxdtib" path="res://musique/people_talking.mp3" id="16_wdoph"]
[ext_resource type="AudioStream" uid="uid://dioknkfs7vb5c" path="res://musique/background.mp3" id="17_fc6x3"]
[ext_resource type="Script" uid="uid://boujxh0nhxyey" path="res://scripts/Communs/object.gd" id="17_svf3d"]
[ext_resource type="Script" uid="uid://dcpbiu0wbk62p" path="res://scripts/Communs/elemMenu.gd" id="18_ijx10"]
[ext_resource type="Texture2D" uid="uid://gdhmctyinih" path="res://assets/meubles/miroir.png" id="19_gc0mp"]
[ext_resource type="Texture2D" uid="uid://b0dxoihc3xbe6" path="res://assets/meubles/cadre.png" id="20_6pwr6"]
[ext_resource type="Texture2D" uid="uid://djw3gqbcyhoau" path="res://assets/temp/dust1.png" id="20_cx3ow"]
[ext_resource type="Texture2D" uid="uid://ds4tn47qtq5re" path="res://assets/meubles/baignoire.png" id="20_gghgv"]
[ext_resource type="Texture2D" uid="uid://dpmqku2qp157x" path="res://assets/meubles/tapis.png" id="21_4ao46"]
[ext_resource type="Texture2D" uid="uid://dos3isfllrblk" path="res://assets/temp/dust2.png" id="21_i3j5g"]
[ext_resource type="PackedScene" uid="uid://bjqgfx63o5avc" path="res://scenes/perso_1.tscn" id="21_svf3d"]
[ext_resource type="Texture2D" uid="uid://dbgia2fhr6o8l" path="res://assets/meubles/panierMetal.png" id="21_vaa7l"]
[ext_resource type="Texture2D" uid="uid://np8prax2x8ux" path="res://assets/meubles/panierPlastique.png" id="22_82qhc"]
[ext_resource type="Texture2D" uid="uid://821byo2hhr53" path="res://assets/temp/sdb_washingMachineBroken.png" id="23_q213m"]
[ext_resource type="Texture2D" uid="uid://b0h0tx7n5alhq" path="res://assets/meubles/etagere.png" id="23_ys6si"]
[ext_resource type="Texture2D" uid="uid://dcrv1b3d43r4l" path="res://assets/meubles/douche.png" id="24_2iwsk"]
[ext_resource type="Texture2D" uid="uid://dwexpua6rwbib" path="res://assets/meubles/toilettes.png" id="25_txmx5"]
[ext_resource type="Texture2D" uid="uid://cwaed2qcy08uy" path="res://assets/temp/sdb_washingMachine.png" id="26_cx3ow"]
[ext_resource type="Texture2D" uid="uid://djx2y11xlkht2" path="res://assets/meubles/poubelle.png" id="26_n8xyk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ip76g"]
texture = ExtResource("5_lguqs")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_avpxn"]
texture = ExtResource("6_68ymg")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_itmto"]
texture = ExtResource("6_6517k")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v4ikx"]
texture = ExtResource("7_ijx10")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3i8f6"]
texture = ExtResource("8_wdoph")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6g4tk"]
texture = ExtResource("9_fc6x3")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_duoh5"]
tile_size = Vector2i(70, 70)
sources/4 = SubResource("TileSetAtlasSource_3i8f6")
sources/5 = SubResource("TileSetAtlasSource_6g4tk")
sources/3 = SubResource("TileSetAtlasSource_v4ikx")
sources/2 = SubResource("TileSetAtlasSource_itmto")
sources/1 = SubResource("TileSetAtlasSource_avpxn")
sources/0 = SubResource("TileSetAtlasSource_ip76g")

[sub_resource type="TileSet" id="TileSet_ijx10"]
tile_size = Vector2i(70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_gghgv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_q213m")
}, {
"duration": 1.0,
"texture": ExtResource("20_cx3ow")
}, {
"duration": 1.0,
"texture": ExtResource("21_i3j5g")
}, {
"duration": 1.0,
"texture": ExtResource("20_cx3ow")
}, {
"duration": 1.0,
"texture": ExtResource("21_i3j5g")
}, {
"duration": 1.0,
"texture": ExtResource("26_cx3ow")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q213m"]
size = Vector2(14.1771, 12.7093)

[node name="baseSalle" type="Node2D"]
script = ExtResource("1_6517k")

[node name="Murs" type="Node2D" parent="."]

[node name="MurBleu" type="Sprite2D" parent="Murs"]
visible = false
z_index = -3
position = Vector2(37.5, -169.5)
scale = Vector2(1.99595, 0.951737)
texture = ExtResource("2_68ymg")

[node name="MurRouge" type="Sprite2D" parent="Murs"]
visible = false
z_index = -3
position = Vector2(32.4999, -270)
scale = Vector2(0.764062, 0.259259)
texture = ExtResource("3_2u0g6")

[node name="MurVert" type="Sprite2D" parent="Murs"]
z_index = -3
position = Vector2(37.5, -270)
scale = Vector2(0.984667, 0.186667)
texture = ExtResource("4_eoixc")

[node name="Sol" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2////AgAAAAAAAAD2/wAAAgAAAAAAAAD2/wEAAgAAAAAAAAD2/wIAAgAAAAAAAAD2/wMAAgAAAAAAAAD2/wQAAgAAAAAAAAD2/wUAAgAAAAAAAAD3////BQAAAAAAAAD3/wAABQAAAAAAAAD3/wEABQAAAAAAAAD3/wIABQAAAAAAAAD3/wMABQAAAAAAAAD3/wQABQAAAAAAAAD3/wUABQAAAAAAAAD4////BQAAAAAAAAD4/wAABQAAAAAAAAD4/wEABQAAAAAAAAD4/wIABQAAAAAAAAD4/wMABQAAAAAAAAD4/wQABQAAAAAAAAD4/wUABQAAAAAAAAD5////BQAAAAAAAAD5/wAABQAAAAAAAAD5/wEABQAAAAAAAAD5/wIABQAAAAAAAAD5/wMABQAAAAAAAAD5/wQABQAAAAAAAAD5/wUABQAAAAAAAAD6////BQAAAAAAAAD6/wAABQAAAAAAAAD6/wEABQAAAAAAAAD6/wIABQAAAAAAAAD6/wMABQAAAAAAAAD6/wQABQAAAAAAAAD6/wUABQAAAAAAAAD7////BQAAAAAAAAD7/wAABQAAAAAAAAD7/wEABQAAAAAAAAD7/wIABQAAAAAAAAD7/wMABQAAAAAAAAD7/wQABQAAAAAAAAD7/wUABQAAAAAAAAD8////BQAAAAAAAAD8/wAABQAAAAAAAAD8/wEABQAAAAAAAAD8/wIABQAAAAAAAAD8/wMABQAAAAAAAAD8/wQABQAAAAAAAAD8/wUABQAAAAAAAAD9////BQAAAAAAAAD9/wAABQAAAAAAAAD9/wEABQAAAAAAAAD9/wIABQAAAAAAAAD9/wMABQAAAAAAAAD9/wQABQAAAAAAAAD9/wUABQAAAAAAAAD+////BQAAAAAAAAD+/wAABQAAAAAAAAD+/wEABQAAAAAAAAD+/wIABQAAAAAAAAD+/wMABQAAAAAAAAD+/wQABQAAAAAAAAD+/wUABQAAAAAAAAD/////BQAAAAAAAAD//wAABQAAAAAAAAD//wEABQAAAAAAAAD//wIABQAAAAAAAAD//wMABQAAAAAAAAD//wQABQAAAAAAAAD//wUABQAAAAAAAAAAAP//BQAAAAAAAAAAAAAABQAAAAAAAAAAAAEABQAAAAAAAAAAAAIABQAAAAAAAAAAAAMABQAAAAAAAAAAAAQABQAAAAAAAAAAAAUABQAAAAAAAAABAP//BQAAAAAAAAABAAAABQAAAAAAAAABAAEABQAAAAAAAAABAAIABQAAAAAAAAABAAMABQAAAAAAAAABAAQABQAAAAAAAAABAAUABQAAAAAAAAACAP//BQAAAAAAAAACAAAABQAAAAAAAAACAAEABQAAAAAAAAACAAIABQAAAAAAAAACAAMABQAAAAAAAAACAAQABQAAAAAAAAACAAUABQAAAAAAAAADAP//BQAAAAAAAAADAAAABQAAAAAAAAADAAEABQAAAAAAAAADAAIABQAAAAAAAAADAAMABQAAAAAAAAADAAQABQAAAAAAAAADAAUABQAAAAAAAAAEAP//BQAAAAAAAAAEAAAABQAAAAAAAAAEAAEABQAAAAAAAAAEAAIABQAAAAAAAAAEAAMABQAAAAAAAAAEAAQABQAAAAAAAAAEAAUABQAAAAAAAAAFAP//BQAAAAAAAAAFAAAABQAAAAAAAAAFAAEABQAAAAAAAAAFAAIABQAAAAAAAAAFAAMABQAAAAAAAAAFAAQABQAAAAAAAAAFAAUABQAAAAAAAAAGAP//BQAAAAAAAAAGAAAABQAAAAAAAAAGAAEABQAAAAAAAAAGAAIABQAAAAAAAAAGAAMABQAAAAAAAAAGAAQABQAAAAAAAAAGAAUABQAAAAAAAAAHAP//BQAAAAAAAAAHAAAABQAAAAAAAAAHAAEABQAAAAAAAAAHAAIABQAAAAAAAAAHAAMABQAAAAAAAAAHAAQABQAAAAAAAAAHAAUABQAAAAAAAAAIAP//BQAAAAAAAAAIAAAABQAAAAAAAAAIAAEABQAAAAAAAAAIAAIABQAAAAAAAAAIAAMABQAAAAAAAAAIAAQABQAAAAAAAAAIAAUABQAAAAAAAAAJAP//BQAAAAAAAAAJAAAABQAAAAAAAAAJAAEABQAAAAAAAAAJAAIABQAAAAAAAAAJAAMABQAAAAAAAAAJAAQABQAAAAAAAAAJAAUABQAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwAAAAAAAAAKAAEAAwAAAAAAAAAKAAIAAwAAAAAAAAAKAAMAAwAAAAAAAAAKAAQAAwAAAAAAAAAKAAUAAwAAAAAAAAADAP7/BAAAAAAAAAAEAP7/BAAAAAAAAAAFAP7/BAAAAAAAAAAGAP7/BAAAAAAAAAAHAP7/BAAAAAAAAAAIAP7/BAAAAAAAAAAJAP7/BAAAAAAAAAD2//7/AQAAAAAAAAD3//7/BAAAAAAAAAD4//7/BAAAAAAAAAD5//7/BAAAAAAAAAD6//7/BAAAAAAAAAD7//7/BAAAAAAAAAD8//7/BAAAAAAAAAD9//7/BAAAAAAAAAD+//7/BAAAAAAAAAD///7/BAAAAAAAAAAAAP7/BAAAAAAAAAABAP7/BAAAAAAAAAACAP7/BAAAAAAAAAA=")
tile_set = SubResource("TileSet_duoh5")

[node name="ObjectBase" type="TileMapLayer" parent="Sol"]
tile_set = SubResource("TileSet_ijx10")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(34, 0)
zoom = Vector2(0.78, 0.78)

[node name="songs" type="Node" parent="."]

[node name="porte" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("14_6517k")

[node name="magasinBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("15_ijx10")

[node name="talkingPeople" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("16_wdoph")

[node name="mainBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("17_fc6x3")
autoplay = true

[node name="ListeObjets" type="Node2D" parent="."]
script = ExtResource("15_wdoph")

[node name="miroir" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-61, -317)
scale = Vector2(5.2094, 4.42062)
texture = ExtResource("19_gc0mp")
script = ExtResource("17_svf3d")

[node name="baignoire" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-561, 160)
scale = Vector2(4.49597, 3.82642)
texture = ExtResource("20_gghgv")
script = ExtResource("17_svf3d")

[node name="tapis" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-146, 108)
scale = Vector2(19.548, 22.409)
texture = ExtResource("21_4ao46")
script = ExtResource("17_svf3d")

[node name="cadre" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-440, -338)
scale = Vector2(6.08827, 5.56443)
texture = ExtResource("20_6pwr6")
script = ExtResource("17_svf3d")

[node name="panierMetal" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-452, -157)
scale = Vector2(3.14709, 2.87365)
texture = ExtResource("21_vaa7l")
script = ExtResource("17_svf3d")

[node name="panierPlastique" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-211, -157)
scale = Vector2(3.27844, 3.16844)
texture = ExtResource("22_82qhc")
script = ExtResource("17_svf3d")

[node name="etagere" type="Sprite2D" parent="ListeObjets"]
position = Vector2(139, -316)
scale = Vector2(7.32356, 5.91531)
texture = ExtResource("23_ys6si")
script = ExtResource("17_svf3d")

[node name="douche" type="Sprite2D" parent="ListeObjets"]
position = Vector2(269, -238)
scale = Vector2(4.91178, 5.24696)
texture = ExtResource("24_2iwsk")
script = ExtResource("17_svf3d")

[node name="toilettes" type="Sprite2D" parent="ListeObjets"]
position = Vector2(-601, -166)
scale = Vector2(7.35743, 6.68682)
texture = ExtResource("25_txmx5")
script = ExtResource("17_svf3d")

[node name="poubelle" type="Sprite2D" parent="ListeObjets"]
position = Vector2(294, 309)
scale = Vector2(3.32845, 4.17751)
texture = ExtResource("26_n8xyk")
script = ExtResource("17_svf3d")

[node name="Menu" parent="." instance=ExtResource("10_svf3d")]
z_index = 1
offset_left = 362.0
offset_top = -416.0
offset_right = 362.0
offset_bottom = -416.0
script = ExtResource("18_ijx10")

[node name="Store" parent="." instance=ExtResource("12_irfwe")]
visible = false
z_index = 2
position = Vector2(-590, -341)

[node name="Perso" type="Node2D" parent="."]

[node name="Perso" parent="Perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("21_svf3d")]
ListeObjets = NodePath("../../ListeObjets")

[node name="BrokenObject" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BrokenObject"]
position = Vector2(-329, -184)
scale = Vector2(2.86634, 2.73255)
sprite_frames = SubResource("SpriteFrames_gghgv")

[node name="espaceBorken" type="Area2D" parent="BrokenObject"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrokenObject/espaceBorken"]
position = Vector2(-331, -182.75)
scale = Vector2(8.74647, 12.3139)
shape = SubResource("RectangleShape2D_q213m")

[node name="BtnReparer" type="Button" parent="BrokenObject"]
visible = false
offset_left = -234.0
offset_top = -263.0
offset_right = -83.0
offset_bottom = -232.0
theme_override_font_sizes/font_size = 20
text = "Reparer pour : 30$"

[connection signal="input_event" from="BrokenObject/espaceBorken" to="." method="_on_espace_borken_input_event"]
[connection signal="pressed" from="BrokenObject/BtnReparer" to="." method="_on_btn_reparer_pressed"]

[editable path="Menu"]
[editable path="Store"]
